--- a/react-mangosteen/index.html
+++ b/react-mangosteen/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/images/orange.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>橙子记账</title>
   </head>
